package cat.udl.eps.softarch.tfgfinder.domain;

import jakarta.persistence.*;
import jakarta.validation.constraints.NotNull;
import lombok.Data;
import lombok.EqualsAndHashCode;


import java.time.ZonedDateTime;

@Entity

@Data
@EqualsAndHashCode(callSuper = true)
public class Interest extends UriEntity<Long> {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @NotNull
    private ZonedDateTime when;

    @NotNull
    private String status;

    @ManyToOne
    private User who;

    @ManyToOne
   private Proposal what;
}
